--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,57 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Jane Doe - Contact</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
 
-    <body>
-        <div>
+<head>
+    <meta charset="utf-8">
+    <title>Jane Doe - Contact</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <!-- Menu e logo vão dentro dessa div -->
         <h1 id="logo"><a href="index.html">Jane Doe</a></h1>
-        </div>
-    </body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="contact">
+        <section>
+            <h2>Contact</h2>
+            <article>
+                <h3>MANAGEMENT | Karen Blanche</h3>
+                <p>email: <a href="mailto:info@mysite.com">info@mysite.com</a></p>
+                <p>phone: 123-456-7890</p>
+            </article>
+            <hr>
+            <article>
+                <h3>BOOKING | Daniel Ku</h3>
+                <p>email: <a href="mailto:info@mysite.com">info@mysite.com</a></p>
+                <p>phone: 123-456-7890</p>
+            </article>
+            <hr>
+            <article>
+                <h3>LABEL | Wix Records, Jake Coldham</h3>
+                <p>email: <a href="mailto:info@mysite.com">info@mysite.com</a></p>
+                <p>phone: 123-456-7890</p>
+            </article>
+            <hr>
+            <article>
+                <h3>PR | That Girl, Sarah Brookstone</h3>
+                <p>email: <a href="mailto:info@mysite.com">info@mysite.com</a></p>
+                <p>phone: 123-456-7890</p>
+            </article>
+        </section>
+    </main>
+    <footer>
+        Copyright - Jane Doe - 2020
+    </footer>
+</body>
+
 </html>
