--- a/index.html
+++ b/index.html
@@ -1,28 +1,34 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Jane Doe - Home</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
 
-    <body>
-        <div>
+<head>
+    <meta charset="utf-8">
+    <title>Jane Doe - Home</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <!-- Menu e logo vão dentro dessa div -->
         <h1 id="logo"><a href="index.html">Jane Doe</a></h1>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="contact.html">Contact</a></li>
-            <li><a href="music.html">Music</a></li>
-        </ul>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
         <div id="banner">
             <!--<img src="img/jane.jpg" alt="Banner de apresentação da Jane Doe" title="Imagem exibindo a Jane Doe">-->
         </div>
-        <div id="rodape">
-            Copyright - Jane Doe - 2020
-        </div>
-    </body>
+    </main>
+    <footer>
+        Copyright - Jane Doe - 2020
+    </footer>
+</body>
+
 </html>
