--- a/music.html
+++ b/music.html
@@ -1,16 +1,48 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Jane Doe - Music</title>
-        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-        <link href="css/style.css" rel="stylesheet">
-    </head>
 
-    <body>
-        <div>
+<head>
+    <meta charset="utf-8">
+    <title>Jane Doe - Music</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+</head>
+
+<body>
+    <header>
         <!-- Menu e logo vão dentro dessa div -->
         <h1 id="logo"><a href="index.html">Jane Doe</a></h1>
-        </div>
-    </body>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="music.html">Music</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main class="music">
+        <section>
+            <h2>Music</h2>
+            <iframe src="https://player.vimeo.com/video/135166028" width="640" height="360" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <ul>
+                <li>Organic Love | 02:40</li>
+                <li>Twist in My Reality | 02:10</li>
+                <li>Street Light | 03:28</li>
+                <li>Love Don't Live Here Anymore (Cover) | 03:49</li>
+            </ul>
+            <iframe src="https://player.vimeo.com/video/134861419" width="640" height="360" frameborder="0"
+                allow="autoplay; fullscreen" allowfullscreen></iframe>
+            <p>Directed by VINCE MALC & EMILIA COLE</p>
+            <p>Edited and Filmed by NICOLAS TROY</p>
+            <p>Produced by NIKI HEART.</p>
+            <p>Wix Films LTD.</p>
+        </section>
+    </main>
+    <footer>
+        Copyright - Jane Doe - 2020
+    </footer>
+</body>
+
 </html>
